--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/restraurant_system
+spring.datasource.url = jdbc:mysql://localhost:3306/online_food_ordering
 
 spring.datasource.username=root
 spring.datasource.password=root
@@ -7,7 +7,6 @@ spring.datasource.password=root
 #spring.datasource.testWhileIdle = true
 #spring.datasource.validationQuery = SELECT 1
 
-server.port=8080
 
 # ===============================
 # = JPA / HIBERNATE
