--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/online_food_ordering
 
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=****
 
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
@@ -25,4 +25,4 @@ spring.jpa.show-sql = true
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
